--- a/index.html
+++ b/index.html
@@ -360,23 +360,22 @@
     <div class='row'>
       <div class='container'>
         <!-- Contact details -->
-        <div class='col-xs-4 center-block'>
-          <img alt='profile' class='avatar' src='http://sca2.github.io/img/avatar.jpg'>
+        <div class='col-xs-3 center-block'>
+          <div class='class thumbnail'>
+            <img src="/images/avatar.jpg" alt="profile photo" />
+          </div>
           <div id='social'>
             <ul class='list-inline'>
               <li>
-                <a href='http://github.com/sca2' target='_blank'>
-                  <i class='fa fa-github-square'></i>
+                <a href="http://github.com/sca2" target="_blank"><i class='fa fa-github-square'></i>
                 </a>
               </li>
               <li>
-                <a href='https://www.linkedin.com/in/tprsca' target='_blank'>
-                  <i class='fa fa-linkedin-square'></i>
+                <a href="https://www.linkedin.com/in/tprsca" target="_blank"><i class='fa fa-linkedin-square'></i>
                 </a>
               </li>
               <li>
-                <a href='https://twitter.com/seventhcircle' target='_blank'>
-                  <i class='fa fa-twitter-square'></i>
+                <a href="https://twitter.com/seventhcircle" target="_blank"><i class='fa fa-twitter-square'></i>
                 </a>
               </li>
             </ul>
@@ -386,7 +385,7 @@
           </div>
         </div>
         <!-- Contact Form -->
-        <div class='col-xs-8' id='contact'>
+        <div class='col-xs-9' id='contact'>
           <form action='http://formspree.io/tpryan_1965@yahoo.com' id='contact-form' method='post' name='contact-form'>
             <!-- Input fields -->
             <div class='row form-group'>
@@ -423,7 +422,7 @@
         </li>
         <li class='divider-vertical'></li>
         <li>
-          <a href='http://github.com/sca2' target='_blank'>github</a>
+          <a href="http://github.com/sca2" target="_blank">github</a>
         </li>
       </ul>
     </div>
