--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class='col-xs-5'>
         <div class='caption'>
           <h3>MyFlix</h3>
-          <p>Tealeaf Academy Project</p>
+          <p>NetFlix clone for Tealeaf Academy Production Quality Rails</p>
         </div>
         <ul class='list-inline'>
           <li class='skills'>Ruby / Rails</li>
@@ -151,7 +151,7 @@
       <div class='col-xs-5'>
         <div class='caption'>
           <h3>BOManager</h3>
-          <p>Octopart API Test App</p>
+          <p>Rails app to evaluate Octopart electronic component API</p>
         </div>
         <ul class='list-inline'>
           <li class='skills'>Ruby / Rails</li>
@@ -173,7 +173,7 @@
       <div class='col-xs-5'>
         <div class='caption'>
           <h3>Rotten Potatoes!</h3>
-          <p>CS169 Rails Project</p>
+          <p>Rotten Tomatoes clone for edX CS169.1x/.2x</p>
         </div>
         <ul class='list-inline'>
           <li class='skills'>Ruby / Rails</li>
@@ -296,7 +296,7 @@
       </div>
       <div class='col-xs-5'>
         <div class='caption'>
-          <h3>Free Code Camp Leaderboard.</h3>
+          <h3>Free Code Camp Leaderboard</h3>
           <p>Example project using JavaScript, React-Bootstrap, Babel, and SASS</p>
         </div>
         <ul class='list-inline'>
