update projects and resume

--- a/index.html
+++ b/index.html
@@ -52,19 +52,22 @@
   <section class='center-block hero' id='about'>
     <div class='container row'>
       <div class='col-xs-4' id='sliders'>
-        <p id='slide-1'>Products: designed</p>
-        <p id='slide-2'>Circuits: developed</p>
-        <p id='slide-3'>Computers: programmed</p>
-        <p id='slide-4'>Problems: solved</p>
+        <p id='fade-1'>Products: designed</p>
+        <p id='fade-2'>Circuits: developed</p>
+        <p id='fade-3'>Computers: programmed</p>
+        <p id='fade-4'>Problems: solved</p>
       </div>
       <div class='col-xs-8'>
         <p id='bio'>
-          I'm an experienced engineer and developer based in Oakland, California.  I've worked with many technologies and can bring a comprehensive set of skills to your next project.
+          I'm an enthusiastic engineer and developer based in Oakland, California.  I've worked with many technologies and can bring a comprehensive set of skills to your next project.
         </p>
         <!-- Skills -->
         <ul class='list-inline'>
-          <li class='skills'>Ruby / Rails</li>
+          <li class='skills'>Ruby</li>
+          <li class='skills'>Rails</li>
           <li class='skills'>JavaScript</li>
+          <li class='skills'>React</li>
+          <li class='skills'>Express</li>
           <li class='skills'>C / C++</li>
           <li class='skills'>Agile</li>
           <li class='skills'>TDD</li>
@@ -99,7 +102,7 @@
           <li class='skills'>CSS</li>
           <li class='skills'>JavaScript</li>
           <li class='skills'>jQuery</li>
-          <li class='skills'>PayPal</li>
+          <li class='skills'>Stripe</li>
           <li class='skills'>RSpec</li>
           <li class='skills'>Git</li>
           <li class='skills'>Linux</li>
@@ -350,24 +353,45 @@
     <div class='container row project'>
       <div class='col-xs-7'>
         <div class='class thumbnail'>
-          <a href="http://codepen.io/tprsca/full/jqbbbN/"><img src="/images/markdown_previewer_thumb.png" alt="Markdown previewer thumb" />
+          <a href="https://fcc-pinterest-clone-app.herokuapp.com/favorites"><img src="/images/pinterest_clone_thumb.png" alt="Pinterest clone thumb" />
           </a>
         </div>
       </div>
       <div class='col-xs-5'>
         <div class='caption'>
           <h3>
-            <a href="http://codepen.io/tprsca/full/jqbbbN/">Markdown Previewer</a>
+            <a href="https://fcc-pinterest-clone-app.herokuapp.com/favorites">Pinterest Clone</a>
           </h3>
-          <p>Example project using JavaScript, React, Babel, and SASS</p>
+          <p>Example project using JavaScript, Express, and Bootstrap</p>
         </div>
         <ul class='list-inline'>
           <li class='skills'>JavaScript</li>
-          <li class='skills'>React</li>
-          <li class='skills'>HAML</li>
-          <li class='skills'>SASS</li>
-          <li class='skills'>Babel</li>
+          <li class='skills'>Express</li>
+          <li class='skills'>Bootstrap</li>
         </ul>
+      </div>
+    </div>
+    <hr>
+    <div class='container row project'>
+      <div class='col-xs-5'>
+        <div class='caption'>
+          <h3>
+            <a href="https://codepen.io/tprsca/full/YxMPap/">Meteorite Map</a>
+          </h3>
+          <p>Meteorite strikes across the world with D3</p>
+        </div>
+        <ul class='list-inline'>
+          <li class='skills'>JavaScript</li>
+          <li class='skills'>HTML</li>
+          <li class='skills'>CSS</li>
+          <li class='skills'>D3</li>
+        </ul>
+      </div>
+      <div class='col-xs-7'>
+        <div class='class thumbnail'>
+          <a href="https://codepen.io/tprsca/full/YxMPap/"><img src="/images/meteorite_map_thumb.png" alt="Meteorite map thumb" />
+          </a>
+        </div>
       </div>
     </div>
   </section>
